--- a/Arrays.ipynb
+++ b/Arrays.ipynb
@@ -2,24 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "6e1d115f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import glob"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
-   "id": "3ba6c7c4",
+   "id": "f1c47bd9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "[1, 2, 3, 4, 5, 6, 7, 8]"
       ]
      },
      "execution_count": 2,
@@ -28,35 +18,38 @@
     }
    ],
    "source": [
-    "file_list  = glob.glob('sample_data/*')\n",
-    "file_list"
+    "list_1d = [1,2,3,4,5,6,7,8]\n",
+    "list_1d"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "d483daad",
+   "execution_count": 4,
+   "id": "3f712c5f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "[[1, 2, 3, 4, 5, 6, 7, 8], [1, 2, 3, 4, 5, 6, 7, 8], [1, 2, 3, 4, 5, 6, 7, 8]]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(file_list)"
+    "list_2d = [[1,2,3,4,5,6,7,8],\n",
+    "          [1,2,3,4,5,6,7,8],\n",
+    "          [1,2,3,4,5,6,7,8]]\n",
+    "list_2d"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "643ef848",
+   "id": "8f305b35",
    "metadata": {},
    "outputs": [],
    "source": []
