--- a/Data types.ipynb
+++ b/Data types.ipynb
@@ -491,35 +491,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "e0f357ea",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(0,10):\n",
-    "    print(i)\n",
-    "    time.sleep(.2)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 23,
    "id": "7325b152",
    "metadata": {},
@@ -545,48 +516,49 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "7bcf40c0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "8e283fac",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "51"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "2a4b38c5",
+   "id": "50a87e38",
    "metadata": {},
    "source": [
-    "<b>Strings are text<br>\n",
-    "ints are numbers with no decimal places<br>\n",
-    "floats are numbers with decimal places<br>\n",
-    "list are collections of things other objects<br>\n",
-    "dictionaries are like lists but with keys<br>"
+    "<b> Make a dictionary and set is to a variable "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c91d8d8a",
+   "id": "752150d4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ebeb9a1f",
+   "metadata": {},
+   "source": [
+    "<b> Make a list of floats and set it to a variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85fddbca",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bfa07a8f",
+   "metadata": {},
+   "source": [
+    "<b> Loop over your list of floats and do something with every value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63ebc95e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -594,7 +566,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -608,7 +580,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
