--- a/3/Image classification clouds.ipynb
+++ b/3/Image classification clouds.ipynb
@@ -12,15 +12,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "anE-FQpsajzn"
-   },
-   "source": [
-    "Install fastai"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -28,6 +19,7 @@
    },
    "outputs": [],
    "source": [
+    "# install fastai\n",
     "!pip install -Uqq fastbook\n",
     "from fastai.vision.all import *\n",
     "# from IPython.display import Image "
@@ -173,7 +165,7 @@
     }
    ],
    "source": [
-    "# Check data\n",
+    "# check data\n",
     "data.show_batch(max_n = 9, figsize = (15,15))"
    ]
   },
@@ -591,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +622,7 @@
        "        1, 1, 1, 1, 1, 1, 1, 1, 1])"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,13 +723,6 @@
     "# export vector file\n",
     "preds_gdf.to_file(export_vector_path, driver=\"GPKG\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
